<resources>
    <string name="app_name">Technology News</string>
    <string name="info_communicating">Communicating with journalists all over the world&#8230;</string>
    <string name="info_no_network">No network connection</string>
    <string name="info_no_recent_news">No recent tech related news found</string>
    <string name="info_downloading">Getting news from the journalists&#8230;</string>
    <string name="settings_title">News Settings</string>
    <string name="settings_menu_item">Settings</string>
    <!-- Strings for Order-by Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>
    <!-- Label for order-by most relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>
    <!-- Strings for Topic Preference [CHAR LIMIT=30] -->
    <string name="settings_topic_label"> Tech Related Topic</string>
    <string name="settings_topic_key" translatable="false">q</string>
    <string name="settings_topic_default" translatable="false">@string/settings_topic_android_value</string>
    <!-- Label for Android topic option [CHAR LIMIT=20] -->
    <string name="settings_topic_android_label">Android</string>
    <string name="settings_topic_android_value" translatable="false">android</string>
    <!-- Label for Google topic option [CHAR LIMIT=20] -->
    <string name="settings_topic_google_label">Google Inc.</string>
    <string name="settings_topic_google_value" translatable="false">google</string>
    <!-- Label for Science topic option [CHAR LIMIT=20] -->
    <string name="settings_topic_science_label">Science</string>
    <string name="settings_topic_science_value" translatable="false">science</string>
    <!-- Connection messages -->
    <string name="communicating">Communicating with the journalists. Please wait&#8230;</string>
    <string name="no_news_found">No recent technology news found</string>
    <string name="no_network">No network connection</string>
</resources>
