<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_most_recent_value"
        android:title="@string/settings_order_by_label"
        android:key="@string/settings_order_by_key"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"/>

    <ListPreference
        android:defaultValue="@string/settings_topic_android_value"
        android:title="@string/settings_topic_label"
        android:key="@string/settings_topic_key"
        android:entries="@array/settings_topic_labels"
        android:entryValues="@array/settings_topic_values"/>

</PreferenceScreen>